--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 :root {
-  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,7 +16,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+body {
+  margin: 0 auto;
+}
 h1,
 h2,
 h3,
@@ -32,6 +33,7 @@ ul,
 ol {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 img {
